# CS202_BTD4

./: .gitignore  CMakeLists.txt  README.md
UML/: README.md
assets/enemy/: enemy-notes.md
assets/font/: font-notes.md
assets/heroes/: heroes-notes.md
assets/map/: map-notes.md
assets/mode/: mode-notes.md
assets/tower/: tower-notes.md
docs/: UML.mmd  design-notes.md
logs/: log.txt
save/: autosave.txt  save1.txt
src/: Properties.h  main.cpp
src/core/: Event.h  Game.cpp  Game.h  IObserver.h  ISubject.h
src/interfaces/: Animation.cpp  Animation.h  Button.cpp  Button.h  Clickable.h  Drawable.h  Event.h  IObserver.h  ISubject.h  InputField.cpp  InputField.h  MySound.cpp  MySound.h  MyTexture.cpp  MyTexture.h  Panel.cpp  Panel.h  PanelElement.cpp  PanelElement.h  SoundChannel.cpp  SoundChannel.h  TextField.cpp  TextField.h  TextureField.cpp  TextureField.h  Updatable.h
src/interfaces/State/: State.cpp  State.h  StateStack.cpp  StateStack.h
src/interfaces/audio/: AudioChannel.cpp  AudioChannel.h  MyAudio.cpp  MyAudio.h  SoundPool.cpp  SoundPool.h
src/logic/: GameLogic.cpp  GameLogic.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  LogicInfo.cpp  LogicInfo.h  LogicManager.cpp  LogicManager.h
src/managers/: FontManager.cpp  FontManager.h  SoundLoader.cpp  SoundLoader.h  SoundManager.cpp  SoundManager.h  StateManager.cpp  StateManager.h  TextureManager.cpp  TextureManager.h
src/map/: Map.cpp  Map.h
src/test/: test.h
src/utils/: Hitbox.cpp  Hitbox.h  Properties.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
(+568 files in other folders)
